<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.PhoneNumberActivity">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="invisible"
        android:layout_centerInParent="true"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/appLogoPhoneNumberAct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:civ_border_width="2dp"
        android:src="@drawable/ic_logo"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"
        app:civ_border_color="#FF000000"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phoneNumberFieldLayout"
        android:padding="30dp"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="7"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:id="@+id/countryCodeField"
                android:inputType="phone"
                android:layout_marginRight="10dp"
                android:text="@string/countryCode"/>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5.5"
                android:layout_marginLeft="10dp"
                android:id="@+id/phoneNumberField"
                android:inputType="phone"
                android:hint="@string/Phone"/>

        </LinearLayout>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submitBtn"
        android:layout_below="@+id/phoneNumberFieldLayout"
        android:text="@string/Generate_OTP"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submitBtn"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="#EF2929"
        android:textStyle="bold" />


</RelativeLayout>